After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 780347 - rtpmux output PTS are not in line with the DTS and the segment
rtpmux output PTS are not in line with the DTS and the segment
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.11.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-21 11:09 UTC by George Kiagiadakis
Modified: 2017-03-24 09:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtpmux: fix output segment and buffer DTS to correspond to the flattened PTS (2.57 KB, patch)
2017-03-21 11:09 UTC, George Kiagiadakis
accepted-commit_now Details | Review

Description George Kiagiadakis 2017-03-21 11:09:53 UTC
Created attachment 348394 [details] [review]
rtpmux: fix output segment and buffer DTS to correspond to the flattened PTS

rtpmux flattens out all buffer PTS to running time, however the buffer DTS remains the same and also the output segment is copied from one of the sink pads, without any logic.

This patch is an attempt to fix this. It converts the DTS also to running time and pushes out a newly initialized segment instead of a random upstream one.
Comment 1 Nicolas Dufresne (ndufresne) 2017-03-21 14:16:53 UTC
Review of attachment 348394 [details] [review]:

Note the DTS can be negative, not sure if it applies to this case, but this patch will output TIME_NONE DTS if it's the case. (not necessarily a problem, I'm letting you judge)
Comment 2 Olivier Crête 2017-03-22 16:40:04 UTC
Review of attachment 348394 [details] [review]:

I'm not sure you need to rsend the segment event in those places. The rtpmux creates its own segment independent from the inputs. I'm not sure if negative DTS is really a real world concern for RTP but it would be a bit tricky unless we just add a fixed reasonable offset in the segment and offset back it off to 0.
Comment 3 George Kiagiadakis 2017-03-23 17:06:52 UTC
(In reply to Olivier Crête from comment #2)
> I'm not sure you need to rsend the segment event in those places. The rtpmux
> creates its own segment independent from the inputs.

No, it doesn't. That's the main bug. My intention is not to re-send the segment, but merely to just send a correct segment while avoiding the propagation of the upstream one.
Comment 4 George Kiagiadakis 2017-03-24 09:11:44 UTC
commit 501bf0e8d144515a743c00d325af84c9f38cb5c0
Author: George Kiagiadakis <george.kiagiadakis@collabora.com>
Date:   Tue Mar 21 12:54:27 2017 +0200

    rtpmux: fix output segment and buffer DTS to correspond to the flattened PTS
    
    https://bugzilla.gnome.org/show_bug.cgi?id=780347