rtpmux: fix output segment and buffer DTS to correspond to the flattened PTS

https://bugzilla.gnome.org/show_bug.cgi?id=780347